Fix user pic alignment

--- a/public/css/dash-style.css
+++ b/public/css/dash-style.css
@@ -120,8 +120,8 @@ h1 {
 	overflow: hidden;
 	float: left;
 	border: 1px solid rgb(54, 34, 65);
-	margin-top: -2%;
-	margin-right: 5px;
+	margin-top: -4%;
+	margin-right: 8px;
 }
 
 #username-pic img{
